# diabetes

./: README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
diabetes_classificator/: app_predicao_diabetes.py  model_evaluation.py  rag_utils.py  requirements.txt  train_models.ipynb  treinar_modelos_csv.py  utils.py
